USECASEUI-388 fixed and with additional changes Fixed i18Resource, subtittle wrap and directive folder Path. Alos added few changes for adapting multiple templates.
Issue-ID: USECASEUI-388

--- a/usecaseui-portal/src/app/views/services/services-list/services-list.component.less
+++ b/usecaseui-portal/src/app/views/services/services-list/services-list.component.less
@@ -203,8 +203,8 @@ hr {
 nz-layout{
     padding: 20px 32px;
     .top-num{
-
-        width: 100%;
+        white-space: normal;
+        width: 100%; 
         display: flex;
         justify-content: space-around;
         app-top-card{
